--- a/index.html
+++ b/index.html
@@ -49,13 +49,8 @@
 
 	<div class="popup _hidden">
 		<div class="popup-content">
-			<a href="#0" class="popup-close">
-				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 441 441">
-					<path fill="#fff" stroke="#fff"
-						d="M220.336 170.564l.353.353.354-.353L390.288 1.318l49.796 49.773-169.269 169.245-.353.354.353.354 169.269 169.245-49.796 49.796-169.245-169.269-.354-.353-.353.353-169.27 169.269-49.748-49.796 169.245-169.245.353-.354-.353-.354L1.318 51.067 51.09 1.318l169.246 169.246z" />
-				</svg>
-			</a>
 			<h2 class="popup-title section-title">Ваш фидбек</h2>
+			<a href="#0" class="popup-close"></a>
 			<form class="feedback">
 				<div class="feedback-row">
 					<label class="feedback-label"><span>Как часто вы заходите на сайт?</span>
